--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobiledoc-kit",
-  "version": "0.10.0-beta.3",
+  "version": "0.10.0",
   "description": "A toolkit for building WYSIWYG editors with Mobiledoc",
   "repository": "https://github.com/bustlelabs/mobiledoc-kit",
   "scripts": {
